--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>Home</title>
     <style>
         *{
             margin: 0;
@@ -12,63 +12,72 @@
             box-sizing: border-box;
         }
         body{
-            box-sizing: border-box;
-            background-color: rgb(247, 247, 247);
             background-image: url("ankush-minda-7KKQG0eB_TI-unsplash.jpg");
+            background-repeat: no-repeat;
             background-size: cover;
-            display: flex;
-        }
-        header{
-            background: black;
-            width: 220vh;
         }
         .navbar{
-            display: flexbox;
-            width: 200vh;
-            height: 70px;
-            border-radius: 25px;
+            display: flex;
+            background:rgb(67, 67, 163);
+            padding: 10px;
         }
         .navbar ul{
+            display: flex;
             text-decoration: none;
             list-style: none;
-            display: flex;
+            margin-left: 9px;
+            padding: 9px;
         }
         .navbar ul li{
             display: flex;
-            padding: 5px;
-            margin: 5px;
             text-decoration: none;
+            list-style: none;
+            margin: 6px;
+            padding: 7px;
         }
         .navbar ul li a{
+            display: flex;
             text-decoration: none;
-            color: cornsilk;
-            padding: 4px 2px 4px 4px;
-            font-weight: 700;
-            margin-left: 1px;
-            font-size: 20px;
-            margin-top: 20px;
+            list-style: none;
+            color: white;
+            font-size: 3vh;
+            margin-left: 9px;
         }
-        .navbar ul li a:hover{
-            background-color: rgb(250, 249, 249);
+        .navbar ul li:hover{
+            background: orangered;
             border-radius: 20px;
-            text-shadow: darkgray;
-            color: black;
-            transition: 3s cubic-bezier(0.075, 0.82, 0.165, 1);
         }
+        .navbar ul li.login {
+            margin-left: 590px;
+            background: orangered;
+            border-radius: 25px;
+        }
+        .navbar ul li.login:hover{
+            background: rgb(223, 90, 42);
+        }
+        .container{
+            background-color: black;
+            height: 200px;
+            opacity: 20%;
+            border-radius: 20px;
+            margin-top: 200px;
+        }
+        
     </style>
 </head>
 <body>
-    <header>
-        <div class="navbar">
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">Packages</a></li>
-                    <li><a href="#">Contact us</a></li>
-                    <li><a href="#">Special trains</a></li>
-                    <li><a href="#">Stays</a></li>
-                </ul>
-        </div>
-    </header>
-    
+    <div class="navbar">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Special Trains</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">Packages</a></li>
+            <li class="login"><a href="#">Login/Register</a></li>
+        </ul>
+    </div>
+    <div class="container">
+
+    </div>
 </body>
 </html>
