--- a/homepage.html
+++ b/homepage.html
@@ -85,7 +85,7 @@
         <div class="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-                <li><a href="Packages.html">Packages</a></li>
+                <li><a href="flight.xsd">Packages</a></li>
                 <li><a href="#">Special Trains</a></li>
                 <li><a href="#">Services</a></li>
                 <li id="login"><a href="Login.html">Login</a></li>
