--- a/Packages.html
+++ b/Packages.html
@@ -4,27 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Packages</title>
+    <title>Dom Parser</title>
     <style>
-        *{
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
+        h1{
+            align-items: center;
+            text-align: center;
+            background-color: orange;
         }
-        body{
+        button{
+            width: 200px;
+            height: 80px;
+            margin-left: 500px;
+            background-color: orange;
+            border-radius: 30px;
+        }
+        button:hover{
             background-color: black;
-        }
-        .header{
-            width: 100%;
-            height: 70px;
-            background-color: cornflowerblue;
+            color: white;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <div class="header">
-        
+    <h1>Packages</h1>
+    <p><button onclick="loadXMLDoc()">GET PACKAGES</button></p>
+    <table id="demo" border="1">
+        <tr>
+            <th>place</th>
+            <th>price</th>
+            <th>train</th>
+            <th>desciption</th>
+        </tr>
+    </table>
 
-    </div>
+    <script>
+        function loadxmldoc(){
+            var xmlhttp = new XMLHttpRequest();
+            xmlhttp.onreadystatechange = function(){
+                if (this.readyState == 4 && this.status == 200){
+                    myFunction(this);
+                }
+            };
+            xmlhttp.open("GET","packages.xml",true);
+            xmlhttp.send();
+        }
+        function myFunction(xml){
+            var x, i, loadXMLDoc, table;
+            xmlDoc = xml.responseXML;
+            table = "<tr><th>place</th><th>price</th><train></th><th><description></th>";
+            x = xmlDoc.getElementsByTagName("tour")
+            for (i = 0; i < x.length; i++){
+                table += "<tr><td>"+
+                    x[i].getElementsByTagName("place")[0].childNodes[0].nodeValue + "</td><td>" + 
+                    x[i].getElementsByTagName("price")[0].childNodes[0].nodeValue + "</td><tr>" + 
+                    x[i].getElementsByTagName("train")[0].childnodes[0].nodeValue + "</td><tr>" +
+                    x[i].getElementsByTagName("description")[0].childnodes[0].nodeValue + "</td><tr>";
+            }
+            document.getElementById("demo").innerHTML.table;
+        }
+    </script>
 </body>
 </html>
