--- a/Packages.html
+++ b/Packages.html
@@ -27,13 +27,14 @@
 </head>
 <body>
     <h1>Packages</h1>
-    <p><button onclick="loadXMLDoc()">GET PACKAGES</button></p>
+    <p><button onclick="loadxmldoc()">GET PACKAGES</button></p>
+
     <table id="demo" border="1">
         <tr>
             <th>place</th>
             <th>price</th>
             <th>train</th>
-            <th>desciption</th>
+            <th>description</th>
         </tr>
     </table>
 
@@ -49,18 +50,18 @@
             xmlhttp.send();
         }
         function myFunction(xml){
-            var x, i, loadXMLDoc, table;
+            var x, i, xmlDoc, table;
             xmlDoc = xml.responseXML;
-            table = "<tr><th>place</th><th>price</th><train></th><th><description></th>";
+            table = "<tr><th>place</th><th>price</th><th><train></th><th><description></th></tr>";
             x = xmlDoc.getElementsByTagName("tour")
             for (i = 0; i < x.length; i++){
                 table += "<tr><td>"+
-                    x[i].getElementsByTagName("place")[0].childNodes[0].nodeValue + "</td><td>" + 
-                    x[i].getElementsByTagName("price")[0].childNodes[0].nodeValue + "</td><tr>" + 
-                    x[i].getElementsByTagName("train")[0].childnodes[0].nodeValue + "</td><tr>" +
-                    x[i].getElementsByTagName("description")[0].childnodes[0].nodeValue + "</td><tr>";
+                    x[i].getElementsByTagName("place")[0].childNodes[0].nodeValue + "</td><td>"+ 
+                    x[i].getElementsByTagName("price")[0].childNodes[0].nodeValue + "</td></tr>" +
+                    x[i].getElementsByTagName("train")[0].childNodes[0].nodeValue + "</td></tr>"+
+                    x[i].getElementsByTagName("description")[0].childNodes[0].nodeValue + "</td></tr>";
             }
-            document.getElementById("demo").innerHTML.table;
+            document.getElementById("demo").innerHTML = table;
         }
     </script>
 </body>
