--- a/homepage.html
+++ b/homepage.html
@@ -78,6 +78,45 @@
             padding: 30px;
             margin-left: 50px;
         }
+        .container-2 .names{
+            display: flexbox;
+            flex-wrap: wrap;
+            align-items: center;
+            background-color: black;
+            height: 100px;
+            border-top-right-radius: 30px;
+            border-bottom-left-radius: 30px;
+        }
+        .container-2 .names ul{
+            display: flex;
+            padding: 20px;
+            align-items: center;
+        }
+        .container-2 .names ul li{
+            display: flex;
+            align-items: center;
+        }
+        .container-2 .names ul li a{
+            text-decoration: none;
+            list-style: none;
+            padding: 30px;
+            font-size: 3vh;
+            align-items: center;
+            margin-left: 20px;
+            color: orange;
+        }
+        .container-2 .names ul li a:hover{
+            background-color: orange;
+            color: white;
+        }
+        .cont-vid{
+            display: flexbox;
+            padding: 30px;
+            margin-left: 100px;
+        }
+        .cont-vid iframe{
+            padding: 30px;
+        }
     </style>
 </head>
 <body>
@@ -85,10 +124,10 @@
         <div class="navbar">
             <ul>
                 <li><a href="homepage.html">Home</a></li>
-                <li><a href="flight.xsd">Packages</a></li>
+                <li><a href="packages2.html">Packages</a></li>
                 <li><a href="#">Special Trains</a></li>
                 <li><a href="#">Services</a></li>
-                <li id="login"><a href="Login.html">Login</a></li>
+                <li id="login"><a href="userregistration.html">Register</a></li>
             </ul>
         </div>
     </header>
@@ -109,8 +148,29 @@
             <img src="surya-teja-oIXJ839p55k-unsplash.jpg" alt="Manali">
             <img src="naman-pandey-y3nWJ-QznP4-unsplash.jpg" alt="Shimla">
         </div>
+        <div class="names">
+            <ul>
+                <li><a href="https://www.tourism.rajasthan.gov.in/jaipur.html">Jaipur</a></li>
+                <li><a href="https://goa-tourism.com/">Goa</a></li>
+                <li><a href="https://www.tripadvisor.in/Tourism-g297624-Ladakh_Jammu_and_Kashmir-Vacations.html">Ladakh</a></li>
+                <li><a href="https://www.keralatourism.org/">Kerala</a></li>
+                <li><a href="https://www.britannica.com/place/Bangalore-India">Bangalore</a></li>
+                <li><a href="https://ecoretreat.odishatourism.gov.in/en.html?url=ecoretreat">Odisha</a></li>
+                <li><a href="http://www.shriamarnathjishrine.com/">Amarnath</a></li>
+                <li><a href="https://www.tourism-of-india.com/manali/">Manali</a></li>
+                <li><a href="https://www.tripadvisor.in/Tourism-g304552-Shimla_Shimla_District_Himachal_Pradesh-Vacations.html">Shimla</a></li>
+            </ul>
+        </div>
     </div>
-
+    <div class="cont-vid">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/QkBMI5m64uY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jYLXQWVpDYk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vydEu1I9r5c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/AkC90RMaQYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VEPZkPhRwmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ecGI4wBE1HY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZKHrvTO32M0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/FxXXHglhCTQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </body>
 </html>
