--- a/userregistration.html
+++ b/userregistration.html
@@ -2,7 +2,7 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <title>HOTEL MANAGEMENT SYSTEM</title>
+        <title>Registration</title>
         <link rel="stylesheet" href="contact.css">
         <style>
                             *{
